
syntax = "proto3";
package user.v1;
option go_package = "github.com/kyson/e-shop/api/protobuf/user/v1;v1";

import "google/api/annotations.proto";

service UserService {
  rpc Register (RegisterRequest) returns (RegisterReply){
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };

  };
  rpc Login (LoginRequest) returns (LoginReply){
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"    
    };
  };
  rpc GetMyProfile (GetMyProfileRequest) returns (GetMyProfileReply){
    option (google.api.http) = {
      get: "/v1/user/profile"
    };
  };
}
message User {
  int32 id = 1;         
  string username = 2;  
  string email = 3;
  string phone = 4;
}
message RegisterRequest {
  string username = 1; 
  string password = 2; 
  string email = 3;
  string phone = 4;
}
message RegisterReply {
  User user = 1; 
}
message LoginRequest {
  string username = 1;
  string password = 2;
}       
message LoginReply {
  string token = 1; // 登录成功后返回的JWT令牌
  User user = 2;   // 返回用户信息
}
message GetMyProfileRequest {
}
message GetMyProfileReply {
  User user = 1; // 返回用户信息
}